--- a/index.html
+++ b/index.html
@@ -213,13 +213,22 @@
         <h2>About Us</h2>
         <p>We are Naveen Dilshan Kuruppu and Sasinika Heshani, a young couple who met in a physics class at Rotary Nugegoda. 
         Our love story began on August 24, 2023, and we've been creating beautiful memories ever since!</p>
-        <p>We enjoy spending time together and exploring places like film halls, One Galle Face, and Beddagana Water Park.</p>
-    </section>
+   </section>
     <section>
         <h2>Our Birthdays</h2>
         <ul>
             <li><strong>Naveen:</strong> March 20, 2003</li>
             <li><strong>Sasinika:</strong> September 22, 2003</li>
+        </ul>
+    </section>
+    
+<section>
+        <h2>Our Memories</h2>
+        <p>We cherish every moment we've spent together, from movie nights to exploring places like One Galle Face, Beddagana Water Park, and more. Here are some highlights of our journey:</p>
+        <ul>
+            <li>Watching movies at the film hall 🎬</li>
+            <li>Romantic evenings at One Galle Face 🏢</li>
+            <li>Peaceful walks at Beddagana Water Park 🌿</li>
         </ul>
     </section>
 
